welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: value update is not a member of Boolean
	while (estSurBiscuit()=false){
               ^Program:5: error: not found: value x
	x=estSurBiscuit()
        ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while (estSurBiscuit()=false){
        ^