welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
	while (estSurBiscuit()=false){
	avance()
	x=estSurBiscuit()
	}
}
